syntax = "proto3";

service RpcBackend {
  // cli
  rpc BackendForCliApi(RpcBincode) returns (RpcBincode);

  // dev tools, screenshot gen
  rpc SaveLocalPlugin (RpcSaveLocalPluginRequest) returns (RpcSaveLocalPluginResponse);
}

message RpcBincode {
  bytes data = 1;
}

message RpcSaveLocalPluginRequest {
  string path = 1;
}

message RpcSaveLocalPluginResponse {
  string stdout_file_path = 1;
  string stderr_file_path = 2;
}
